# boatraceCal

./: .gitignore  AGENTS.md  pyproject.toml
.omx/: notepad.md  project-memory.json
configs/: default.toml
docs/: README.md  review-workflow.md  snapshot-job-plan.md  实施路线图.md  数据与特征设计.md  智能投票分析系统总体设计.md  模型回测与风险控制.md
docs/implementation/: mvp-status-2026-07-15.md  phase-1-verification.md
examples/sample_backtest/: README.md  payouts.csv  recommendations.csv  report.json  results.csv
src/boatrace_cal/: __main__.py  api_adapter.py  api_contract.py  api_server.py  api_services.py  cli.py  config.py  errors.py  review_archive.py  review_excel.py  review_store.py  reviews.py  settlement.py
tests/: test_config.py  test_errors.py  test_package.py  test_settlement.py
tests/api/: test_api_adapter.py  test_api_server.py  test_candidate_query_service.py  test_openapi_contract.py  test_review_workflow_service.py
tests/backtest/: test_backtest_confidence.py  test_backtest_equity.py  test_backtest_export.py  test_backtest_package.py  test_backtest_runner.py  test_backtest_serialization.py  test_backtest_settlement.py  test_backtest_summary.py  test_preflight.py
tests/cli/: test_cli.py
tests/domain/: test_bets.py  test_races.py  test_recommendations.py  test_temporal.py  test_versions.py
tests/examples/: test_sample_backtest.py
tests/ingestion/: test_odds.py  test_payouts.py  test_recommendation_ingestion.py  test_results.py  test_sources.py
tests/jobs/: test_ledger.py  (+3 more)
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+68 files in other folders)
